--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script src="https://kit.fontawesome.com/126c5d9d7a.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Crito</title>
   </head>
@@ -11,3 +12,7 @@
     <div id="root"></div>
   </body>
 </html>
+
+
+
+
